# programming-assignment-merlin-cg

./: .gitignore  CMakeLists.txt  README.md
include/: DropletVisualize.h  Emitter.h  HydraulicErosion.h  MainWindow.h  NGLScene.h  PerlinNoiseGenerator.h  Plane.h  TerrainGenerator.h  WindowParams.h
shaders/: ColourFragment.glsl  ColourVertex.glsl  HeightColourFragment.glsl  HeightColourVertex.glsl  ParticleFragment.glsl
src/: DropletVisualize.cpp  Emitter.cpp  HydraulicErosion.cpp  MainWindow.cpp  NGLScene.cpp  PerlinNoiseGenerator.cpp  Plane.cpp  main.cpp
ui/: MainWindow.ui
